<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vspmemberweb.MyBenefitsActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/vsp_wellvision"
        android:title="@string/title_activity_vsp_wellvision"/>
    
    <item
        android:id="@+id/additional_eyecare"
        android:title="@string/title_activity_additional_eyecare"/>
    
    <item
        android:id="@+id/contacts"
        android:title="@string/title_activity_contacts"/>  

    <item
        android:id="@+id/computer_vision"
        android:title="@string/title_activity_computer_vision"/>
    
    <item
        android:id="@+id/specialty_eyecare"
        android:title="@string/title_activity_specialty_eyecare"/>  
        
    <item
        android:id="@+id/eyeconic"
        android:title="@string/title_activity_eyeconic"/> 
</menu>
