<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vspmemberweb.HomeActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/my_benefits"
        android:title="@string/title_activity_my_benefits"/>
    
    <item
        android:id="@+id/make_a_claim"
        android:title="@string/title_activity_make_a_claim"/>
    
    <item
        android:id="@+id/find_a_doctor"
        android:title="@string/title_activity_find_a_doctor"/>    

</menu>
